[gd_scene load_steps=12 format=3 uid="uid://b326ovwmj62hf"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_v40wr"]
[ext_resource type="LabelSettings" uid="uid://csrb5ilr7y6dy" path="res://resources/main_menu_title_label_setting.tres" id="2_ckptl"]
[ext_resource type="PackedScene" uid="uid://k635iu86fy37" path="res://scene_objects/menu_background.tscn" id="2_vuhek"]
[ext_resource type="StyleBox" uid="uid://67m76h2nyeyy" path="res://resources/main_menu_button_style.tres" id="3_b61lj"]
[ext_resource type="StyleBox" uid="uid://cscwrtv4vl12l" path="res://resources/main_menu_button_hover_style.tres" id="4_kcoe6"]
[ext_resource type="FontFile" uid="uid://smk86k8i0gcp" path="res://assets/fonts/Montserrat-Bold.otf" id="4_wtatl"]
[ext_resource type="StyleBox" uid="uid://dtfd366g1j00" path="res://resources/main_menu_button_pressed_style.tres" id="5_hqrxp"]
[ext_resource type="FontFile" uid="uid://com4cjqc1ln44" path="res://assets/fonts/Montserrat-Medium.otf" id="8_ns53n"]
[ext_resource type="PackedScene" uid="uid://b7fkndcm0e336" path="res://scene_objects/settings.tscn" id="11_5pplk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eypyq"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.12549, 0.384314, 0.486275, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_cpmo2"]
font = ExtResource("8_ns53n")
font_size = 30
shadow_size = 0
shadow_offset = Vector2(0, 0)

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_v40wr")

[node name="backgroudMenu" parent="." instance=ExtResource("2_vuhek")]

[node name="menuContainer" type="VBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TopMargin" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Title" type="Label" parent="menuContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "GameTitle"
label_settings = ExtResource("2_ckptl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="optionsContainer" type="HBoxContainer" parent="menuContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="leftMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="buttonsContainer" type="VBoxContainer" parent="menuContainer/optionsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="topMargin" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="PlayButton" type="Button" parent="menuContainer/optionsContainer/buttonsContainer"]
texture_filter = 3
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../ExitButton")
theme_override_fonts/font = ExtResource("4_wtatl")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxFlat_eypyq")
theme_override_styles/disabled = ExtResource("3_b61lj")
theme_override_styles/hover = ExtResource("4_kcoe6")
theme_override_styles/pressed = ExtResource("5_hqrxp")
theme_override_styles/normal = ExtResource("3_b61lj")
text = "Play"

[node name="margin1" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="SettingsButton" type="Button" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(25, 100)
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../PlayButton")
theme_override_fonts/font = ExtResource("4_wtatl")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_eypyq")
theme_override_styles/disabled = ExtResource("3_b61lj")
theme_override_styles/hover = ExtResource("4_kcoe6")
theme_override_styles/pressed = ExtResource("5_hqrxp")
theme_override_styles/normal = ExtResource("3_b61lj")
text = "Settings"

[node name="margin2" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(25, 100)
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../SettingsButton")
theme_override_fonts/font = ExtResource("4_wtatl")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_eypyq")
theme_override_styles/disabled = ExtResource("3_b61lj")
theme_override_styles/hover = ExtResource("4_kcoe6")
theme_override_styles/pressed = ExtResource("5_hqrxp")
theme_override_styles/normal = ExtResource("3_b61lj")
text = "Credits"

[node name="margin3" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="Button" parent="menuContainer/optionsContainer/buttonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 100)
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_fonts/font = ExtResource("4_wtatl")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_eypyq")
theme_override_styles/disabled = ExtResource("3_b61lj")
theme_override_styles/hover = ExtResource("4_kcoe6")
theme_override_styles/pressed = ExtResource("5_hqrxp")
theme_override_styles/normal = ExtResource("3_b61lj")
text = "Exit"

[node name="bottomMargin" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="rightMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="versionString" type="Label" parent="."]
custom_minimum_size = Vector2(1920, 50)
offset_top = 1028.0
offset_right = 206.0
offset_bottom = 1066.0
size_flags_horizontal = 8
text = "VersionString"
label_settings = SubResource("LabelSettings_cpmo2")
horizontal_alignment = 2
vertical_alignment = 1

[node name="settings" parent="." instance=ExtResource("11_5pplk")]
visible = false

[connection signal="pressed" from="menuContainer/optionsContainer/buttonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/buttonsContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/buttonsContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/buttonsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
